# sistema-portuario

./: .editorconfig  .gitignore  Dockerfile  README.md  build.js  config.py  docker-compose.yml  heroku.yml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt
app/: __init__.py  assets.py  fields.py  utils.py  validators.py
app/assets/scripts/: app.js  empresa.js  relatorio.js  (+2 more)
app/empresa/: __init__.py  views.py
app/main/: __init__.py  views.py
app/models/: __init__.py  empresa.py  tipo_usuario.py  usuario.py
app/navio/: __init__.py  views.py
app/porto/: __init__.py  views.py
app/relatorio/: __init__.py  views.py
app/usuario/: __init__.py  views.py
app/viagem/: __init__.py  views.py
backend/: .env.sample  .flake8  Dockerfile  pyproject.toml
backend/sistema_portuario/: settings.py  urls.py  wsgi.py
backend/sistema_portuario/core/: admin.py  fields.py  models.py  router.py  serializers.py  utils.py  views.py
backend/sistema_portuario/core/fixtures/: essencial.json
backend/sistema_portuario/core/management/commands/: popular_com_exemplos.py
backend/sistema_portuario/core/migrations/: 0001_initial.py
backend/tests/: conftest.py
backend/tests/integration/: test_empresas.py  test_navios.py  test_portos.py  test_tipos_carga.py  test_usuarios.py  test_viagens.py
backend/tests/unit/core/fields/: test_cnpj.py  test_cpf.py  test_imonumber.py
backend/tests/unit/core/serializers/: test_empresa.py  test_navio.py  test_porto.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.js  router.js
tests/: conftest.py  test_filters.py  test_usuario.py
(+51 files in other folders)
